[Exp] simpleoff_10/Feb18_012321:
- Fix a bug in trans.absolute_reg (inversed scale)
- transformer.bottleneck: 32
- transformer.independent: true

--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -69,8 +69,8 @@ model:
         dpool_size: 15
         transformer:
             enable: true
-            independent: false
-            bottleneck: null
+            independent: true
+            bottleneck: 32
             absolute_regressor: true
 
 dataset:
