[Exp] simpleoff_10/Feb18_125853:
- trans.dilation = 2 from 1

--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -68,6 +68,7 @@ model:
         atten_space_norm: false
         dpool_size: 15
         transformer:
+            dilation: 2
             enable: true
             independent: true
             bottleneck: 32
