[Exp] simpleoff_10/Feb18_134146:
- trans.dilation = 1
- trans.idp_use_stride = true

--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -68,9 +68,10 @@ model:
         atten_space_norm: false
         dpool_size: 15
         transformer:
-            dilation: 2
+            dilation: 1
             enable: true
             independent: true
+            idp_use_stride: true
             bottleneck: 32
             absolute_regressor: true
 
