[Exp] oneoff_10/Feb21_020204:
- Remove extra bn+relu for trans and estimator
- trans.enable = false

--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -67,7 +67,7 @@ model:
         transformer:
             num_offset: 256
             num_feature: 256
-            enable: true
+            enable: false
             independent: true
             bottleneck: null
             absolute_regressor: true
