--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -55,23 +55,36 @@ model:
 
     learnable_offset:
         init_stride: 0
-        num_blk: 3
+        num_blk: 1
         num_offset: 256
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
         regress_offset: false
-        enable_atten: true
-        enable_post_atten: false
-        atten_space_norm: false
+        atten:
+            enable: true
+            space_norm: false
+            source: input
+        post_atten:
+            enable: false
+            space_norm: false
+            source: input
         dpool_size: 15
         transformer:
             num_offset: 256
             num_feature: 256
-            enable: true
+            enable: false
             independent: true
             bottleneck: null
             absolute_regressor: true
+            atten:
+                enable: true
+                space_norm: false
+                source: input
+            post_atten:
+                enable: false
+                space_norm: false
+                source: input
 
 dataset:
     profile: coco
