[Exp] oneoff_10/Feb21_161104:
- atten.source: transformer from input
- trans.enable: true
- trans.atten.enable: true
- trans.atten.source: input

--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -64,16 +64,16 @@ model:
         atten:
             enable: true
             space_norm: false
-            source: input
+            source: transformer
         post_atten:
             enable: false
             space_norm: false
-            source: input
+            source: transformer
         dpool_size: 15
         transformer:
             num_offset: 256
             num_feature: 256
-            enable: false
+            enable: true
             independent: true
             bottleneck: null
             absolute_regressor: true
