--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -47,7 +47,7 @@ model:
     gaussian_kernel: 1.4
     regress_predict: false
     loss_dpool_cof: 1.e-6
-    fc: false
+    fc: true
     detail:
         disable_displace: false
         learnable_offset: true
@@ -57,7 +57,7 @@ model:
     learnable_offset:
         init_stride: 0
         num_blk: 2
-        num_offset: 128
+        num_offset: [64, 192]
         num_out_channel: 128
         bind_chan: 1
         reuse_offset: false
