--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -58,7 +58,7 @@ model:
         init_stride: 0
         num_blk: 2
         num_offset: [64, 192]
-        post_groups: [1, 32]
+        post_groups: [1, 1]
         num_out_channel: 128
         bind_chan: 1
         reuse_offset: false
@@ -74,7 +74,8 @@ model:
             source: transformer
         dpool_size: 15
         transformer:
-            num_offset: 256
+            num_blk: 2
+            num_offset: [64, 192]
             num_feature: 256
             enable: true
             independent: true
