[Exp] oneoff_10/Mar04_141702:
- init_random_scale: 2.

--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -57,7 +57,7 @@ model:
 
     learnable_offset:
         init_stride: 0
-        init_random_scale: 0
+        init_random_scale: 2.
         num_blk: 2
         num_offset: [64, 192]
         post_groups: [1, 1]
