[Exp] oneoff_10/Mar04_161850:
- Fix a bug when decresing angle_std
- Decresing std now based on min_std instead of 0
- Set min_angle_std: 3, min_scale_std: 0.5

--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -95,7 +95,9 @@ model:
             enable: true
             num_sample: 4
             angle_std: 10
+            min_angle_std: 3
             scale_std: 1
+            min_scale_std: 0.5
             sampler: gaussian
             weight_dist: uniform
 dataset:
