--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -83,6 +83,7 @@ model:
             independent: true
             bottleneck: null
             absolute_regressor: true
+            disable_arc: true
             atten:
                 enable: true
                 space_norm: false
