--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -24,7 +24,7 @@ train:
         transformer_grow_iter: 2785
         momentum_bn: 0.1
         momentum: 0.0
-        arc_sigma_dec_iter: 50000
+        arc_sigma_dec_iter: 150000
 
 eval:
     parse_threshold: 0.1
@@ -100,8 +100,8 @@ model:
             min_angle_std: 3
             scale_std: 2
             min_scale_std: 0.5
-            sampler: uniform
-            weight_dist: gaussian
+            sampler: gaussian
+            weight_dist: uniform
 dataset:
     profile: coco
     subset: 0.3
