[Exp] oneoff_11/Mar06_142850:
- sampler: uniform

--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -100,7 +100,7 @@ model:
             min_angle_std: 3
             scale_std: 3
             min_scale_std: 0.5
-            sampler: gaussian
+            sampler: uniform
             weight_dist: uniform
 dataset:
     profile: coco
