--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -17,7 +17,7 @@ train:
         always_train_block: true
         lr: 1.e-3
         lr_regressor: 1.e-3
-        lr_transformer: 5.e-4
+        lr_transformer: 1.e-3
         lr_dpool_sigma: 5.e-4
         gamma_lr: 0.3
         decay_step_lr: 100000 # 15 * 6543
@@ -102,7 +102,7 @@ model:
             min_scale_std: 0.5
             sampler: gaussian
             weight_dist: uniform
-            divide_dist: false
+            divide_dist: true
 dataset:
     profile: coco
     subset: 0.3
