--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -15,7 +15,7 @@ train:
         train_min_step: 2785
         sep_train_iter: 0
         always_train_block: true
-        lr: 1.e-3
+        lr: 2.e-3
         lr_regressor: 1.e-3
         lr_transformer: 1.e-3
         lr_dpool_sigma: 5.e-4
@@ -60,7 +60,7 @@ model:
         init_random_scale: 0.
         num_blk: 2
         num_offset: [64, 192]
-        num_transform: [16, 48]
+        num_transform: null
         post_groups: [1, 1]
         num_out_channel: 128
         bind_chan: 1
