--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -19,7 +19,7 @@ train:
         lr_regressor: 1.e-3
         lr_transformer: 1.e-3
         lr_dpool_sigma: 5.e-4
-        gamma_lr: 0.9
+        gamma_lr: 0.3
         decay_step_lr: 100000 # 15 * 6543
         transformer_grow_iter: 2785
         momentum_bn: 0.1
@@ -79,6 +79,7 @@ model:
         transformer:
             num_blk: 2
             num_offset: [64, 192]
+            stride: [2, 2]
             num_feature: 256
             enable: true
             independent: true
