--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -78,7 +78,8 @@ model:
             source: transformer
         dpool_size: 7
         transformer:
-            load: checkpoint/oneoff_11/Mar07_140125/checkpoint_77.pth.tar
+            load: null
+            loss_pointer_cof: 0.001
             num_blk: 2
             num_offset: [64, 192]
             stride: [1, 1]
