--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -79,7 +79,7 @@ model:
         dpool_size: 7
         transformer:
             load: null
-            loss_pointer_cof: 0.0001
+            loss_pointer_cof: 1.e-5
             num_blk: 2
             num_offset: [64, 192]
             stride: [1, 1]
