--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -81,7 +81,7 @@ model:
             load: null
             loss_pointer_cof: 0
             num_blk: 2
-            num_offset: [64, 192]
+            num_offset: [64, 64, 64, 64]
             stride: [1, 1]
             num_feature: 256
             enable: true
@@ -101,9 +101,9 @@ model:
             enable: true
             simple: true
             num_sample: 32
-            angle_std: 60
+            angle_std: 30
             min_angle_std: 3
-            scale_std: 5
+            scale_std: 3
             min_scale_std: 0.5
             sampler: gaussian
             weight_dist: uniform
@@ -114,9 +114,9 @@ dataset:
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
-        scale_factor: 0.5
-        rotate_factor: 60
-        translation_factor: 0.1
+        scale_factor: 0.25
+        rotate_factor: 30
+        translation_factor: 0.05
     mpii:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
