--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -45,7 +45,7 @@ log:
 model:
     inp_shape: [192, 256] # W, H
     out_shape: [48, 64] # W, H
-    multi_predict: true
+    multi_predict: false
     gaussian_kernel: 1.4
     regress_predict: false
     loss_dpool_cof: 1.e-6
@@ -59,10 +59,10 @@ model:
     learnable_offset:
         init_stride: 0
         init_random_scale: 0.
-        num_blk: 4
-        num_offset: [64, 64, 64, 64]
+        num_blk: 2
+        num_offset: [64, 192]
         num_transform: null
-        post_groups: [1, 1, 1, 1]
+        post_groups: [1, 1]
         num_out_channel: 128
         bind_chan: 1
         reuse_offset: false
@@ -80,9 +80,9 @@ model:
         transformer:
             load: null
             loss_pointer_cof: 0
-            num_blk: 2
-            num_offset: [64, 192]
-            stride: [1, 1]
+            num_blk: 4
+            num_offset: [64, 64, 64, 64]
+            stride: [1, 1, 1, 1]
             num_feature: 256
             enable: true
             independent: true
