[Exp] oneoff_11/Mar11_114851:
- sep_scale: true
- Additional conv+bn+relu+channelnorm for x and y regressor

--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -88,7 +88,7 @@ model:
             independent: true
             bottleneck: null
             absolute_regressor: true
-            sep_scale: false
+            sep_scale: true
             disable_arc: true
             atten:
                 enable: true
