--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -61,7 +61,7 @@ model:
         init_random_scale: 0.
         num_blk: 2
         num_offset: [64, 192]
-        num_transform: null
+        trans_groups: null
         post_groups: [1, 1]
         num_out_channel: 128
         bind_chan: 1
@@ -80,9 +80,9 @@ model:
         transformer:
             load: null
             loss_pointer_cof: 0
-            num_blk: 4
-            num_offset: [64, 64, 64, 64]
-            stride: [1, 1, 1, 1]
+            num_blk: 2
+            num_offset: [64, 192]
+            stride: [1, 1]
             num_feature: 256
             enable: true
             independent: true
@@ -91,7 +91,7 @@ model:
             sep_scale: true
             disable_arc: true
             atten:
-                enable: true
+                enable: false
                 space_norm: false
                 source: input
             post_atten:
