--- a/experiments/one/hparams.yaml
+++ b/experiments/one/hparams.yaml
@@ -63,7 +63,7 @@ model:
         num_offset: [64, 192]
         trans_groups: null
         post_groups: [1, 1]
-        use_transformer: [false, true]
+        use_transformer: [true, true]
         num_out_channel: 128
         bind_chan: 1
         reuse_offset: false
