--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -1,6 +1,6 @@
 exp:
     name: offset
-    id: 100
+    id: 101
 
 train:
     learning_rate: 5.e-4
@@ -52,7 +52,7 @@ model:
         first_esp_only: false
 
     learnable_offset:
-        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25]
+        expand_chan_ratio: [0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0.5, 0, 0.25]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -63,7 +63,7 @@ model:
 
 dataset:
     profile: coco
-    subset: 0.3
+    subset: null
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
