--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -16,6 +16,7 @@ train:
         lr_regressor: 1.e-3
         lr_gamma: 0.3
         lr_decay_step: 100000 # 15 * 6543
+        lr_dpool_sigma: 5.e-4
         bn_momentum: 0.1
         momentum: 0.0
 
@@ -33,6 +34,7 @@ log:
     # - Intermediate result and visualization
     move_average_cycle: 500
     offset_save_interval: 1000
+    sigma_change_average_cycle: 500
 
 model:
     use_gn: true
@@ -41,6 +43,7 @@ model:
     out_shape: [48, 64] # W, H
     gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
     resnet: 50
+    loss_dpool_cof: 1.e-6
     detail:
         early_predictor_label_index: [3, 2, 1]
         disable_displace: false
@@ -52,7 +55,8 @@ model:
         first_esp_only: false
 
     learnable_offset:
-        expand_chan_ratio: [0, 2, 0, 0, 1, 0, 0, 0, 0, 0.5, 0, 0.5, 0]
+        expand_chan_ratio: [0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0.5, 0, 0.25]
+        dpool_size: 7
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
