--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -11,6 +11,7 @@ train:
     test_batch: 16
     weight_decay: 0
     offset:
+        always_train_block: true
         train_min_step: 6543
         lr: 1.e-3
         lr_regressor: 1.e-3
@@ -43,7 +44,7 @@ model:
     out_shape: [48, 64] # W, H
     gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
     resnet: 50
-    loss_dpool_cof: 1.e-8
+    loss_dpool_cof: 1.e-6
     detail:
         early_predictor_label_index: [3, 2, 1]
         disable_displace: false
@@ -55,8 +56,8 @@ model:
         first_esp_only: false
 
     learnable_offset:
-        expand_chan_ratio: [0, 0, 2, 0, 0, 1, 0, 0, 0, 0.5, 0, 0.5, 0]
-        dpool_size: 0
+        expand_chan_ratio: [0, 0, 2, 0, 0, 1, 0, 0, 0, 0, 0.5, 0, 0.25]
+        dpool_size: 7
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
