[Exp] hrnet_2/Mar17_023544:
- lr: 5e-4 from 1e-3
- offset.lr_gamma: 0.3 from 0.6
- half_body_num_joints: 8
- half_body_prob: 0.3 from 0
- scale_factor: 0.35 from 0.25
- rotate_factor: 45 from 30

--- a/experiments/hrnet/hparams.yaml
+++ b/experiments/hrnet/hparams.yaml
@@ -3,7 +3,7 @@ exp:
     id: 2
 
 train:
-    learning_rate: 1.e-3
+    learning_rate: 5.e-4
     lr_gamma: 0.5
     num_epoch: 100
     schedule: []
@@ -16,7 +16,7 @@ train:
         train_min_step: 500
         lr: 1.e-3
         lr_regressor: 1.e-3
-        lr_gamma: 0.6
+        lr_gamma: 0.3
         lr_decay_step: 100000 # 15 * 6543
         lr_dpool_sigma: 5.e-4
         momentum: 0.0
@@ -122,9 +122,11 @@ dataset:
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
-        scale_factor: 0.25
-        rotate_factor: 30
+        scale_factor: 0.35
+        rotate_factor: 45
         translation_factor: 0.05
+        half_body_num_joints: 8
+        half_body_prob: 0.3
     mpii:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
