--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -57,7 +57,7 @@ model:
         first_esp_only: false
 
     learnable_offset:
-        expand_chan_ratio: [2, 1, 1, 1, 0.5, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 0.25, 0.125]
+        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25]
         dpool_size: 0
         bind_chan: 1
         reuse_offset: false
@@ -73,9 +73,11 @@ dataset:
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
-        scale_factor: 0.25
-        rotate_factor: 30
+        scale_factor: 0.35
+        rotate_factor: 45
         translation_factor: 0.05
+        half_body_num_joints: 8
+        half_body_prob: 0.3
     mpii:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
