--- a/experiments/hrnet/hparams.yaml
+++ b/experiments/hrnet/hparams.yaml
@@ -40,9 +40,9 @@ log:
 model:
     use_gn: false
     pretrained: pretrained/hrnet_w32-36af842e.pth
-    inp_shape: [192, 256] # W, H
-    out_shape: [48, 64] # W, H
-    gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+    inp_shape: [288, 384] # W, H
+    out_shape: [72, 96] # W, H
+    gaussian_kernels: [3.8, 2.9, 2.3, 1.7] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
     final_predictor_index: 3
     loss_dpool_cof: 1.e-6
     detail:
@@ -122,11 +122,11 @@ dataset:
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
-        scale_factor: 0.35
-        rotate_factor: 45
+        scale_factor: 0.25
+        rotate_factor: 30
         translation_factor: 0.05
         half_body_num_joints: 8
-        half_body_prob: 0.3
+        half_body_prob: -1
     mpii:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
