--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -40,9 +40,9 @@ log:
 model:
     use_gn: true
     resnet_pretrained: pretrained/resnet50_gn.pth
-    inp_shape: [192, 256] # W, H
-    out_shape: [48, 64] # W, H
-    gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+    inp_shape: [288, 384] # W, H
+    out_shape: [72, 96] # W, H
+    gaussian_kernels: [3.8, 2.9, 2.3, 1.7] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
     resnet: 50
     loss_dpool_cof: 1.e-6
     detail:
