--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -69,6 +69,12 @@ model:
         use_in_predictor: false
         enable_atten: true
         enable_mask: false
+        atten:
+            enable: true
+            space_norm: false
+        post_atten:
+            enable: false
+            space_norm: false
         transformer:
             enable: true
             absolute_regressor: true
