[Exp] offset_102/Apr12_233854:
- Use displaced feature map as source of transformer
- atten.enable: true

--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -68,7 +68,7 @@ model:
         regress_offset: false
         use_in_predictor: false
         atten:
-            enable: false
+            enable: true
             space_norm: false
         post_atten:
             enable: false
@@ -77,6 +77,7 @@ model:
             enable: true
             absolute_regressor: true
             sep_scale: true
+            source: displace
         arc:
             enable: true
             simple: true
