--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -67,6 +67,7 @@ model:
 
     learnable_offset:
         expand_chan_ratio: [2, 1, 1, 1, 0.5, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 0.25, 0.125]
+        use_transformer: [1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]
         dpool_size: 0
         regress_offset: false
         use_in_predictor: false
