--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -26,10 +26,9 @@ train:
         joint_optimize_transformer: false
 
     ind_transformer:
-        multi_scale: [1, 0.5, 0.25, 0.125]
-        scale_std: 0.25
+        scale_std: 0.5
         rotate_std: 90
-        translation_std: 0.1
+        translation_std: 0.25
 
 eval:
     parse_threshold: 0.1
@@ -100,6 +99,9 @@ model:
         num_offset: [64, 192]
         stride: [1, 1]
         num_feature: 256
+        multi_scale: [1, 0.5, 0.25, 0.125]
+        keypoint_based: true
+        keypoint_sigma: 2
         loss_angle_cof: 1
         loss_scale_cof: 2
 
