[Exp] offset_102/Apr21_115203:
- Multiscale

--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -99,7 +99,7 @@ model:
         num_offset: [64, 192]
         stride: [1, 1]
         num_feature: 256
-        multi_scale: [1]
+        multi_scale: [1, 0.5, 0.25, 0.125]
         keypoint_based: true
         keypoint_sigma: 2
         loss_angle_cof: 1
