[Exp] offset_102/Apr21_144640:
- no multiscale
- add loss of inside variance

--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -99,11 +99,12 @@ model:
         num_offset: [64, 192]
         stride: [1, 1]
         num_feature: 256
-        multi_scale: [1, 0.5, 0.25, 0.125]
+        multi_scale: [1]
         keypoint_based: true
         keypoint_sigma: 2
         loss_angle_cof: 1
         loss_scale_cof: 2
+        loss_var_cof: 1
 
 dataset:
     profile: coco
