--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -26,6 +26,7 @@ train:
         joint_optimize_transformer: false
 
     ind_transformer:
+        ind_offset_lr: 5.e-4
         scale_std: 0.25
         rotate_std: 90
         translation_std: 0.25
