--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -48,7 +48,7 @@ log:
     sigma_change_average_cycle: 500
 
 model:
-    mode: "transformer"
+    mode: "main"
     use_gn: true
     resnet_pretrained: pretrained/resnet50_gn.pth
     inp_shape: [192, 256] # W, H
@@ -68,7 +68,7 @@ model:
 
     learnable_offset:
         expand_chan_ratio: [2, 1, 1, 1, 0.5, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 0.25, 0.125]
-        use_transformer: [1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+        use_transformer: [0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
         dpool_size: 0
         regress_offset: false
         use_in_predictor: false
@@ -83,7 +83,7 @@ model:
             independent: true
             num_regress: 1
         arc:
-            enable: false
+            enable: true
             simple: true
             num_sample: 16
             angle_std: 30
@@ -95,7 +95,7 @@ model:
             divide_dist: true
 
     ind_transformer:
-        pretrained: checkpoint/offset_102/Apr20_021115/checkpoint_39.pth.tar
+        pretrained: checkpoint/offset_102/Apr21_161229/checkpoint_3.pth.tar
         num_blk: 2
         num_offset: [64, 192]
         stride: [1, 1]
