--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -21,7 +21,7 @@ train:
         lr_dpool_sigma: 5.e-4
         bn_momentum: 0.1
         momentum: 0.0
-        arc_sigma_dec_iter: 200000
+        arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
         joint_optimize_transformer: false
 
@@ -69,7 +69,7 @@ model:
     learnable_offset:
         expand_chan_ratio: [2, 1, 1, 1, 0.5, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 0.25, 0.125]
         use_transformer: [0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-        dpool_size: 7
+        dpool_size: 0
         regress_offset: false
         use_in_predictor: false
         atten:
@@ -84,7 +84,7 @@ model:
             num_regress: 1
         arc:
             enable: true
-            simple: true
+            simple: false
             num_sample: 16
             angle_std: 30
             min_angle_std: 3
