--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -23,7 +23,7 @@ train:
         momentum: 0.0
         arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
-        joint_optimize_transformer: false
+        joint_optimize_transformer: true
 
     ind_transformer:
         ind_offset_lr: 5.e-4
