--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -23,7 +23,7 @@ train:
         momentum: 0.0
         arc_sigma_dec_iter: 0
         transformer_grow_iter: 0
-        joint_optimize_transformer: true
+        joint_optimize_transformer: false
 
     ind_transformer:
         ind_offset_lr: 5.e-4
@@ -68,7 +68,7 @@ model:
 
     learnable_offset:
         expand_chan_ratio: [2, 1, 1, 1, 0.5, 0.5, 0.5, 0.25, 0.25, 0.25, 0.25, 0.25, 0.125]
-        use_transformer: [0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+        use_transformer: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]
         dpool_size: 0
         regress_offset: false
         use_in_predictor: false
