--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -11,7 +11,7 @@ train:
     test_batch: 16
     weight_decay: 0
     offset:
-        always_train_block: false
+        always_train_block: true
         train_min_step: 2000
         lr: 1.e-3
         lr_regressor: 1.e-3
@@ -74,7 +74,7 @@ model:
         use_in_predictor: false
         atten:
             enable: true
-            space_norm: false
+            space_norm: true
         post_atten:
             enable: false
             space_norm: true
